GitHub User Finder: image resize

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div>
 			<input type="text" placeholder="Enter a Github username" />
 			<section class="user-info container">
-				<div class="image"><img class="user-image"  alt="user_image" /></div>
+				<div class="image-box"><img class="user-image"  alt="user_image" /></div>
 				<h2 id='user-name'>Username</h2>
 				<span id='user-id'>userid</span>
 				<div class="followers flex list">
